--- a/empresa.html
+++ b/empresa.html
@@ -1,62 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa | All Luminum Br</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      margin: 0;
-      color: #fff;
-      background: #0f0f0f;
-      padding-top: 100px;
-    }
-
-    main {
-      max-width: 900px;
-      margin: auto;
-      padding: 60px 20px;
-    }
-
-    h1 {
-      font-size: 36px;
-      margin-bottom: 24px;
-    }
-
-    p {
-      font-size: 17px;
-      line-height: 1.7;
-      margin-bottom: 16px;
-      opacity: 0.9;
-    }
-  </style>
+  <title>Empresa | All Luminum</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<main>
-  <h1>Quem Somos</h1>
+  <main>
+    <h1>Empresa</h1>
+    <p>Conteúdo institucional da empresa.</p>
+  </main>
 
-  <p>
-    A All Luminum Br nasceu com o propósito de entregar soluções em alumínio
-    alinhadas aos mais altos padrões industriais.
-  </p>
-
-  <p>
-    Atuamos com foco em qualidade, processo, confiabilidade e relacionamento
-    de longo prazo, atendendo empresas que exigem precisão e responsabilidade técnica.
-  </p>
-
-  <p>
-    Nossa operação está sediada em São Carlos – SP, com atuação estratégica
-    em projetos industriais, estruturais e personalizados.
-  </p>
-</main>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
