--- a/atuacao.html
+++ b/atuacao.html
@@ -1,59 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação | All Luminum Br</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      margin: 0;
-      background: #111;
-      color: #fff;
-      padding-top: 100px;
-    }
-
-    main {
-      max-width: 1000px;
-      margin: auto;
-      padding: 60px 20px;
-    }
-
-    h1 {
-      font-size: 36px;
-      margin-bottom: 30px;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li {
-      margin-bottom: 18px;
-      font-size: 18px;
-      opacity: 0.9;
-    }
-  </style>
+  <title>Atuação | All Luminum</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<main>
-  <h1>Atuação e Soluções</h1>
+  <main>
+    <h1>Atuação</h1>
+    <p>Áreas de atuação da All Luminum.</p>
+  </main>
 
-  <ul>
-    <li>✔ Perfis e soluções em alumínio industrial</li>
-    <li>✔ Projetos personalizados conforme necessidade técnica</li>
-    <li>✔ Acabamentos industriais e pintura eletrostática</li>
-    <li>✔ Fornecimento para aplicações estruturais e produtivas</li>
-    <li>✔ Atendimento técnico e comercial especializado</li>
-  </ul>
-</main>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
