--- a/index.html
+++ b/index.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum</title>
-  <link rel="stylesheet" href="style.css">
+  <title>All Luminum Br | Alumínio Industrial</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin:0;
+      font-family:Arial, Helvetica, sans-serif;
+      background:#000;
+      color:#fff;
+    }
+
+    .hero {
+      min-height:100vh;
+      background:url("https://images.unsplash.com/photo-1581090700227-1e37b190418e") center/cover no-repeat;
+      padding:140px 20px 60px;
+      text-align:center;
+    }
+
+    .hero-box {
+      background:rgba(0,0,0,0.65);
+      max-width:700px;
+      margin:auto;
+      padding:50px;
+    }
+
+    footer {
+      background:#0f0f0f;
+      padding:40px 20px;
+      text-align:center;
+      font-size:14px;
+    }
+  </style>
 </head>
+
 <body>
 
-  <!-- Header carregado via JS -->
-  <div id="header"></div>
+<div id="header"></div>
 
-  <main>
-    <h1>All Luminum</h1>
-    <p>Página inicial do site.</p>
-  </main>
+<section class="hero">
+  <div class="hero-box">
+    <h1>Alumínio Industrial com Responsabilidade Técnica</h1>
+    <p>Perfis, soluções e projetos em alumínio para aplicações industriais e estruturais.</p>
+  </div>
+</section>
 
-  <script src="script.js"></script>
+<footer id="contato">
+  <p>📧 vendas@allluminumbr.com</p>
+  <p>📞 (16) 99785-7531</p>
+  <p>📍 São Carlos – SP – Brasil</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
