--- a/empresa.html
+++ b/empresa.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa | All Luminum</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Empresa | All Luminum Br</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin:0;
+      font-family:Arial, Helvetica, sans-serif;
+      background:#111;
+      color:#fff;
+      padding-top:120px;
+    }
+
+    main {
+      max-width:900px;
+      margin:auto;
+      padding:40px 20px;
+    }
+  </style>
 </head>
+
 <body>
 
-  <div id="header"></div>
+<div id="header"></div>
 
-  <main>
-    <h1>Empresa</h1>
-    <p>Conteúdo institucional da empresa.</p>
-  </main>
+<main>
+  <h1>Quem Somos</h1>
+  <p>A All Luminum Br atua com soluções em alumínio voltadas ao mercado industrial.</p>
+  <p>Foco em qualidade, processo, confiabilidade e relacionamento de longo prazo.</p>
+  <p>Sede em São Carlos – SP.</p>
+</main>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
