--- a/processos.html
+++ b/processos.html
@@ -2,80 +2,60 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Processos e Padrões de Qualidade | All Luminum</title>
-  <meta name="description" content="Conheça os processos industriais e padrões de qualidade da All Luminum na fabricação de perfis de alumínio.">
+  <title>Processos Industriais | All Luminum</title>
+  <meta name="description" content="Conheça os processos industriais da All Luminum, com foco em qualidade, padronização e controle produtivo.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
-<header>
-  <nav>
-    <a href="/">Início</a> |
-    <a href="/empresa.html">Empresa</a> |
-    <a href="/atuacao.html">Atuação</a> |
-    <a href="/processos.html">Processos</a>
-  </nav>
-</header>
+  <header>
+    <nav>
+      <a href="/">Início</a> |
+      <a href="/empresa.html">Empresa</a> |
+      <a href="/atuacao.html">Atuação</a> |
+      <a href="/processos.html">Processos</a> |
+      <a href="/#contato">Contato</a>
+    </nav>
+  </header>
 
-<main>
+  <main>
+    <h1>Processos Industriais</h1>
 
-  <h1>Processos e Padrões de Qualidade</h1>
-
-  <section>
     <p>
-      Na All Luminum, qualidade não é discurso comercial.
-      É resultado de processos industriais definidos, controle técnico
-      e padronização em todas as etapas de produção.
+      Na All Luminum, os processos industriais são estruturados para garantir
+      consistência, precisão e qualidade em cada etapa produtiva.
     </p>
-  </section>
 
-  <section>
-    <h2>Seleção de Matéria-Prima</h2>
-    <p>
-      Trabalhamos com fornecedores homologados e ligas de alumínio
-      adequadas para aplicações técnicas e industriais.
-    </p>
-  </section>
+    <section>
+      <h2>Padronização e Controle</h2>
+      <p>
+        Trabalhamos com processos definidos, controle técnico e acompanhamento
+        contínuo para assegurar repetibilidade e desempenho dos perfis de alumínio.
+      </p>
+    </section>
 
-  <section>
-    <h2>Controle Dimensional</h2>
-    <p>
-      Cada perfil é produzido com foco em precisão dimensional,
-      garantindo encaixe, resistência e uniformidade.
-    </p>
-  </section>
+    <section>
+      <h2>Qualidade Aplicada</h2>
+      <p>
+        Cada etapa produtiva segue critérios técnicos que visam reduzir variações,
+        garantir acabamento adequado e atender exigências industriais.
+      </p>
+    </section>
 
-  <section>
-    <h2>Padronização de Perfis</h2>
-    <p>
-      Os processos seguem padrões repetíveis, reduzindo variações
-      e assegurando consistência entre lotes.
-    </p>
-  </section>
+    <section>
+      <h2>Compromisso com o Resultado</h2>
+      <p>
+        Nosso foco está na entrega de soluções confiáveis, alinhadas às necessidades
+        do mercado industrial e aos padrões de qualidade estabelecidos.
+      </p>
+    </section>
 
-  <section>
-    <h2>Inspeção Final</h2>
-    <p>
-      Antes da liberação, os perfis passam por inspeção visual e técnica,
-      assegurando conformidade com os requisitos definidos.
-    </p>
-  </section>
+  </main>
 
-  <section>
-    <p>
-      <strong>Compromisso com prazo, precisão e confiabilidade industrial.</strong>
-    </p>
-    <p>
-      Para aplicações técnicas e industriais, fale com nossa equipe.
-    </p>
-  </section>
-
-</main>
-
-<footer>
-  <p>© All Luminum</p>
-</footer>
+  <footer>
+    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 </html>
